# bazel build "//src:transformation"
py_library(
    name = "transformation",
    srcs = [
        "__init__.py",
        "transformation.py",
    ],
    deps = [
        "@pip//numpy",
        "@pip//scipy",
    ],
    imports = ["."] ,
    visibility = ["//visibility:public"],
)

# bazel build "//src:csv_reader"
py_library(
    name = "csv_reader",
    srcs = [
        "__init__.py",
        "csv_reader.py",
    ],
    deps = [
    ],
    imports = ["."] ,
    data = ["//data:data"],
    visibility = ["//visibility:public"],
)
